JDK21 최초정리